# LazyLabel

./: .coverage  .gitignore  .pre-commit-config.yaml  BUILD_WINDOWS.md  CHANGELOG.md  CITATION.cff  FIXES_SUMMARY.md  HOVER_DEBUG_SUMMARY.md  LICENSE  NOTICE  README.md  build_windows.py  commit.sh  controls.py  custom_file_system_model.py  debug_and_test_hover.py  debug_hover.py  fix_multiview_hover.py  hover_debug_guide.md  lazylabel.spec  main.py  photo_viewer.py  pyproject.toml  reorderable_class_table.py  requirements.txt  sam_model.py  test_boundary_cancel.py  test_hover_mechanism.py  test_hover_multiview.py  test_hover_simple.py  test_mouse_boundary_integration.py  test_multiview_ai_mode.py  test_multiview_hover_debug.py  test_multiview_simple.py  test_multiview_unit.py  test_simple_multiview.py
.github/workflows/: tests.yml
build_system/: README.md
build_system/windows/: BUILD_WINDOWS.md  build_windows.py  lazylabel.spec  qt_runtime_hook.py
installer/: installer.nsi
src/lazylabel/: ARCHITECTURE.md  HOTKEY_FEATURE.md  USAGE_MANUAL.md  __init__.py  __main__.py  _version.py  ai_availability.py  controls.py  custom_file_system_model.py  editable_vertex.py  main.py  numeric_table_widget_item.py  photo_viewer.py  reorderable_class_table.py  sam_model.py  utils.py
src/lazylabel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_bbox_logic.py  test_hover_functionality.py  test_hover_logic.py  test_multiview_undo_redo.py
tests/integration/: test_propagation_flagging.py  test_sequence_workflow.py
(+171 files in other folders)
